--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "main": "app.js",
-  "scripts": {
-    "start": "node ."
-  },
   "type": "module",
+  "scripts": {
+    "start": "node .",
+    "dev": "nodemon app.js"
+  },  
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.9.0"
   }
 }
